--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sass": "^1.76.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-mkcert": "^1.17.5"
   }
 }
