--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.1.10",
     "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
     "next-themes": "^0.3.0",
