--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jotai": "^2.8.3",
     "lucide-react": "^0.383.0",
     "next-themes": "^0.3.0",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
