--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.0",
     "scss": "^0.2.4",
